# few_execution_threads_synchronization_through_messages_queue

./: CLIStart.sh  CMakeLists.txt  GTeststart.sh  Makefile  README.md  a.out  draft.cpp  main.cpp
CLI/: ConsoleLineInterface.cpp  ConsoleLineInterface.h
src/: CMakeLists.txt  DataEvent.cpp  DataEvent.h  DataStorage.cpp  DataStorage.h  Device.cpp  Device.h  DeviceA.cpp  DeviceA.h  DeviceB.cpp  DeviceB.h  DeviceEvent.cpp  DeviceEvent.h  DeviceReader.cpp  DeviceReader.h  Event.h  EventQueue.cpp  EventQueue.h  StartedEvent.cpp  StartedEvent.h  WorkDoneEvent.cpp  WorkDoneEvent.h
src/parallel_executor/: Application.h  DataEvent.cpp  DataEvent.h  Device.h  DeviceA.cpp  DeviceA.h  DeviceB.cpp  DeviceB.h  DeviceEvent.cpp  DeviceEvent.h  Event.h  EventQueue.cpp  EventQueue.h  StartedEvent.h  WorkDoneEvent.cpp  WorkDoneEvent.h
task2/: DataEvent.h  Device.h  DeviceA.cpp  DeviceA.h  DeviceB.cpp  DeviceB.h  DeviceEvent.cpp  DeviceEvent.h  DeviceReader.cpp  DeviceReader.h  Event.h  EventQueue.cpp  EventQueue.h  StartedEvent.cpp  StartedEvent.h  WorkDoneEvent.cpp  WorkDoneEvent.h  main.cpp  prog
task2/multithread_execution_try/: multithread.cpp
test/: CMakeLists.txt  DeviceA_Tests.cpp  DeviceB_Tests.cpp  DeviceReader_Tests.cpp  Devices_Tests.cpp  EventQueueAndEvents_Tests.cpp  EventQueue_Tests.cpp  utilities_Tests.cpp  utilities_Tests.h
